fix(tile): wrap overflowing content

--- a/packages/calcite-components/src/components/tile/tile.scss
+++ b/packages/calcite-components/src/components/tile/tile.scss
@@ -68,6 +68,7 @@ calcite-link {
 
 .content-container {
   flex-direction: column;
+  word-break: break-all;
 }
 
 .text-content-container {
